--- a/index.html
+++ b/index.html
@@ -6,57 +6,60 @@
 		<title>Black Girls Code</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<link rel="stylesheet" href="assets/css/reset.css">
+		<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">		<link rel="stylesheet" href="assets/css/reset.css">
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
 		<div class="wrapper">
 			<header>
-				<h1>
-					<a href="index.html">Black Girls Code</a>
-				</h1>
-				<div class="cta-button"> &lt; Donate / &gt; </div>
+				<div class="header-toprow">
+					<h1>
+						<a href="index.html">Black Girls Code</a>
+					</h1>
+					<button class="cta-button" id="donate-button"> &lt; Donate / &gt; </button>
+				</div>
 				<nav>
 					<ul>
-						<li>//Home</li>
-						<li>//Events</li>
-						<li>//Register</li>
-						<li>//Shop</li>
+						<li><a class="active" href="index.html">//Home</a></li>
+						<li><a href="events.html">//Events</a></li>
+						<li><a href="register.html">//Register</a></li>
+						<li><a href="">//Shop</a></li>
 					</ul>
 				</nav>
 			</header>
 			<section class="hero">
-				<img src="assets/img/hero-img.jpg" alt="young black girls">
+				<img src="assets/img/BlackGirlsCode1.jpg" alt="young black girls">
 			</section>
 			<section class="vision">
 				<h2>{Our Vision}</h2>
 				<p>To increase the number of women of color in the digital space by empowering girls 	of color ages 7 to 17 to become innovators in STEM fields, leaders in their 	communities, and builders of their own futures through exposure to computer science 	and technology. To provide African-American youth with the skills to occupy some of 	the 1.4 million computing job openings expected to be available in the U.S. by 2020, 	and to train 1 million girls by 2040.</p>
 			</section>
-			<section class="three-boxes">
-				<div class="box" id="box1">
-					<h3>Register Child</h3>
-				</div>
-				<div class="box" id="box2">
-					<h3>Get Involved</h3>
-				</div>
-				<div class="box" id="box3">
-					<h3>Donate</h3>
+			<section>
+				<div class="three-boxes">
+					<div class="box" id="box1">
+						<h3>Register Child</h3>
+					</div>
+					<div class="box" id="box2">
+						<h3>Get Involved</h3>
+					</div>
+					<div class="box" id="box3">
+						<h3>Donate</h3>
+					</div>
 				</div>
 			</section>
 			<section class="founder">
-				<div class="video">
-					<video src="" autoplay poster=""></video>
+				<div class="founder-video">
+					<video src="assets/video/founder-video.mp4" autoplay poster="founder-image.jpg"></video>
 				</div>
 				<div class="founder-info">
 					<p><span>var</span> $founder =</p>
 					<strong>Kimberly Bryant</strong>
-					<div class="cta-button"> &lt; Learn More / &gt; </div>
+					<button class="cta-button"> &lt; Learn More / &gt; </button>
 				</div>
 			</section>
 			<section class="partners">
 				<h2>{Our Partners}</h2>
-				<div class="partner images">
+				<div class="partner-logos">
 					<img src="assets/img/verizon.png" alt="verizon logo">
 					<img src="assets/img/adobe-partners.png" alt="adobe logo">
 					<img src="assets/img/oracle-partners.png" alt="oracle logo">
