--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
 				</div>
 			</section>
 			<section class="founder">
-				<div class="founder-video">
-					<video src="assets/video/founder-video.mp4" autoplay poster="founder-image.jpg"></video>
-				</div>
+				<video src="assets/video/founder-video.mp4" autoplay poster="founder-image.jpg"></video>
 				<div class="founder-info">
 					<p><span>var</span> $founder =</p>
 					<strong>Kimberly Bryant</strong>
@@ -70,9 +68,9 @@
 			</section>
 			<footer>
 				<div class="footer-links">
-					<a href="">Press Mentions</a>
-					<a href="">Contact</a>
-					<a href="">Privacy Policy</a>
+					<li><a href="">Press Mentions</a>|</li>
+					<li><a href="">Contact</a>|</li>
+					<li><a href="">Privacy Policy</a></li>
 				</div>
 				<div class="social-icons">
 					<a href="" class="icon-twitter">twitter</a>
