--- a/events.html
+++ b/events.html
@@ -6,7 +6,8 @@
 		<title>Black Girls Code</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">		<link rel="stylesheet" href="assets/css/reset.css">
+		<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">		
+		<link rel="stylesheet" href="assets/css/reset.css">
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
@@ -21,12 +22,82 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">//Home</a></li>
-						<li><a class="active" href="events.html">//Events</a></li>
+						<li><a href="events.html" class="active">//Events</a></li>
 						<li><a href="">//Register</a></li>
 						<li><a href="">//Shop</a></li>
 					</ul>
 				</nav>
 			</header>
+			<main class="events-main">
+				<div class="space"></div>
+				<section class="search">
+					<h3>Find code events &amp;&amp; programs near you</h3>
+					<div class="search-input">
+					<input type="text" placeholder="Search events"><input type="text" placeholder="City">
+					<input type="date" placeholder="Dec">
+					<button>Search;</button>
+					</div>
+				</section>
+				<section class="events-list">
+					<h2>{Our Events}</h2>
+					<div class="result-right">
+						<p class="date">12/12/17</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result">
+						<p class="date">12/20/17</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result-right">
+						<p class="date">12/23/17</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result">
+						<p class="date">01/04/18</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result-right">
+						<p class="date">01/08/18</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result">
+						<p class="date">01/12/18</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result-right">
+						<p class="date">01/08/18</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+					<div class="result">
+						<p class="date">01/12/18</p>
+						<p class="title">Webpage in a Day</p>
+						<button>#Select</button>
+					</div>
+				</section>
+			</main>
+			<section class="apply">
+				<button class="apply-cta">&lt; Apply for a Scholarship / &gt;</button>
+			</section>
+			<footer>
+				<div class="footer-links">
+					<li><a href="">Press Mentions</a>|</li>
+					<li><a href="">Contact</a>|</li>
+					<li><a href="">Privacy Policy</a></li>
+				</div>
+				<div class="social-icons">
+					<a href="" class="icon-twitter">twitter</a>
+					<a href="" class="icon-facebook">facebook</a>
+					<a href="" class="icon-pinterest">pinterest</a>
+				</div>
+			</footer>
+
 		</div>
 	</body>
 </html>
